--- a/example1/index.html
+++ b/example1/index.html
@@ -29,14 +29,20 @@
     <!-- content -->
     <body>
         <!-- some text and links -->
+        <p> Tienes cara de algarrobico </p>
         <p>
             <a href="https://commons.wikimedia.org/wiki/File:Black_hole_-_Messier_87_crop_max_res.jpg">Event Horizon Telescope, uploader cropped and converted TIF to JPG</a>, <a href="https://creativecommons.org/licenses/by/4.0">CC BY 4.0</a>, via Wikimedia Commons
+        </p>
+        <p>
+            <a href="http://127.0.0.1:5500/example1/index.html">Tururú
         </p>
         
         <!-- an image -->
         <img id="myImage"
              alt="Black hole - Messier 87 crop max res"
              src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg/1024px-Black_hole_-_Messier_87_crop_max_res.jpg">
+
+         <p> Hello website! </p>
 
         <!-- a caption -->
         <p id="caption">
